--- a/index.html
+++ b/index.html
@@ -2820,6 +2820,7 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">14</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">5. Zongpeng Zhang, Mingqing Xiao, Tong Lin, Xiao-Hua Zhou, Taoyun Ji, and <u>Zhouchen Lin</u>,<em> Augmented Adversarial Optimization for Cross-patient Automatic Epileptic Seizure Detection</em>, submitted to Neural  Networks.</span></p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">14</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">4. Mingqing  Xiao, Qingyan Meng, Zongpeng Zhang, Yisen Wang, and <u>Zhouchen Lin</u>, <em>SPIDE:  A Purely Spike-based Method for Training Feedback Spiking Neural Networks</em>, submitted to Neural  Networks.</span></span></span></p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">143. Huan Li and <u>Zhouchen Lin</u>, <em>Restarted Nonconvex Accelerated Gradient Descent: No More Polylogarithmic Factor in the $O(\epsilon^{-7/4})$ Complexity</em>, submitted to J. Machine Learning Research.</span></span></span></p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">142. Qi Chen, Yifei Wang, Zhengyang Geng, Yisen Wang, Jiansheng Yang, and <u>Zhouchen Lin</u>, <em>Equilibrium Image Denoising with Implicit Differentiation</em>, submitted to IEEE Trans. Image Processing. </span></p>
@@ -3470,11 +3471,13 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">44. 4 papers submitted to AAAI 2023.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">43. 1 paper submitted to ACML 2022.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">42. 1 paper submitted to CIKM 2022.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">42. 15 paper submitted to NeurIPS 2022.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">41. 15 paper submitted to NeurIPS 2022.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">41. Nan Ke, Tong Lin, <u>Zhouchen Lin</u>, Xiao-Hua Zhou, and Taoyun Ji, <em>Convolutional Transformer Networks For Epileptic Seizure Detection,</em> CIKM 2022. [<a href="Publications/2022-CIKM-CTN.pdf">pdf</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">40. Qi Chen, Yifei Wang, Yisen Wang, Jiansheng Yang, and <u>Zhouchen Lin</u>, <em>Optimization-induced Implicit Graph Diffusion</em>, ICML 2022: 3648-3661. [<a href="Publications/2022-ICML-Graph.pdf">pdf</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4254,6 +4257,8 @@ granted)</span></p>
 <p>30. (202110550895.6) 基于优化诱导的平衡神经网络的图像分类方法</p>
 <p>31. (2021108958875) 基于规范等变转换算子神经网络的三维物体形状分类方法</p>
 <p>32. (2021109109762) 一种基于动态滤波等变卷积网络模型的图像分类方法</p>
+<p>33. (202210694741.9) 随时间在线训练脉冲神经网络模型的图像数据分类方法</p>
+<p>34. (202210814527.2) 基于深度学习优化器的大规模图像分类方法</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
 Activities:   
         <o:p></o:p>
@@ -4334,9 +4339,9 @@ Shenzhen.</p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">27. 
 Reviewer/Chair to Conferences:   
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  CVPR 2023 (<strong>Senior Area Chair</strong>), CVPR 2022 (<strong>Award Committee</strong>), NIPS 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  AAAI 2023, CVPR 2023 (<strong>Senior Area Chair</strong>), CVPR 2022 (<strong>Award Committee</strong>), NIPS 
 2022 (<strong>Senior Area Chair</strong>), ICML 2022 (<strong>Senior Area Chair</strong>), ICLR 2022 (<strong>Area Chair</strong>), ICPR 2022  
-(<strong>Program Co-Chair</strong>), ACML 2021 (<strong>Area Chair</strong>), NIPS 
+(<strong>Program Co-Chair</strong>), AAAI 2022, ACML 2021 (<strong>Area Chair</strong>), NIPS 
 2021 (<strong>Area Chair</strong>), ICML 2021 (<strong>Area Chair</strong>), IJCAI 2021 (<strong>distinguished Area Chair</strong>, <strong>Video Competition Chair</strong>), ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
 (<strong>Area Chair</strong>), PRCV 2021 
 (<strong>Publication Chair</strong>), ACML 2020 (<strong>Area Chair</strong>), NIPS 
@@ -4749,7 +4754,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on July 13, 2022. Number of visitors since March 1, 2010:     
+was last updated on Aug. 9, 2022. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
