--- a/index.html
+++ b/index.html
@@ -3536,11 +3536,9 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">169. N papers submitted to NeurIPS 2024.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">168. 10 papers submitted to NeurIPS 2024.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">168. 1 paper submitted to COLM 2024.</span></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">167. 1 papers submitted to COLT 2024.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">167. 1 paper submitted to COLM 2024.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">166. Yang Chen, Cong Fang, <u>Zhouchen Lin*</u>, and Bing Liu, <em>Relational Learning in Pre-Trained Models: A Theory from Hypergraph Recovery Perspective</em>, ICML 2024. [<a href="Publications/2024-ICML-Relation.pdf">pdf</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -3570,7 +3568,7 @@ Conference Papers:<o:p></o:p></span></u></b></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">154. Pengyun Yue, Cong Fang*, and <u>Zhouchen Lin*</u>, <em>On the Lower Bound of Minimizing Polyak-Łojasiewicz Functions</em>, COLT 2023. [<a href="Publications/2023-COLT-Zeroth.pdf">pdf</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">53. Yi Wu, Xu Yanyang, Wenhao Zhu, Guojie Song*, <u>Zhouchen Lin</u>, Liang Wang, and Shaoguo Liu, <em>KDLGT: A Linear Graph Transformer Framework via Kernel Decomposition Approach</em>, IJCAI 2023. [<a href="Publications/2023-IJCAI-KDLGT.pdf">pdf</a>]</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">53. Yi Wu, Yanyang Xu, Wenhao Zhu, Guojie Song*, <u>Zhouchen Lin</u>, Liang Wang, and Shaoguo Liu, <em>KDLGT: A Linear Graph Transformer Framework via Kernel Decomposition Approach</em>, IJCAI 2023. [<a href="Publications/2023-IJCAI-KDLGT.pdf">pdf</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">52. Zongpeng Zhang, Zenan Ling, Tong Lin, and <u>Zhouchen Lin*</u>, <em>Gradient Descent Optimizes Normalization-Free ResNets</em>, IJCNN 2023. [<a href="Publications/2023-IJCNN-N-F-ResNet.pdf">pdf</a>]</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4448,7 +4446,7 @@ Shenzhen.</p>
   to Journals:    
     <o:p></o:p>
 </span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Optimization Methods and Software (<strong>Associate Editor</strong>), Mathematical Programming, IEEE Trans.
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Acta Automatica Sinica (<strong>Associate Editor</strong>),  Optimization Methods and Software (<strong>Associate Editor</strong>), Mathematical Programming, IEEE Trans.
   Pattern Analysis and Machine Intelligence (<strong>Retired Associate Editor</strong>), International Journal of Computer
   Vision (<strong>Associate Editor</strong>), IEEE Trans. Information Theory, IEEE Journal of Selected Topics in 
   Signal Processing (<strong>Guest Editor</strong>), J. Machine Learning Research, 
@@ -4466,8 +4464,9 @@ Shenzhen.</p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">32. 
 Reviewer/Chair to Conferences:   
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">ICML 2024 (<strong>Senior Area Chair</strong>), PRCV 2024 
-(<strong>Program Co-Chair</strong>), ICLR 2024 (<strong>Senior Area Chair</strong>), 第十九届中国图象图形学学会青年科学家会议（General Co-Chair），NeurIPS 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">NeurIPS 
+2024 (<strong>Senior Area Chair</strong>), ICML 2024 (<strong>Senior Area Chair</strong>), PRCV 2024 
+(<strong>Program Co-Chair</strong>), ICLR 2024 (<strong>Senior Area Chair</strong>), 第十九届中国图象图形学学会青年科学家会议（G<strong>eneral Co-Chair）</strong>，NeurIPS 
 2023 (<strong>Senior Area Chair</strong>), ECAI 2023 (<strong>Area Chair</strong>), ICCV 2023 (<strong>Area Chair</strong>), ICLR 2023 (<strong>Area Chair</strong>), AAAI 2023, CVPR 2023 (<strong>Senior Area Chair</strong>), CVPR 2022 (<strong>Award Committee</strong>), NeurIPS 
 2022 (<strong>Senior Area Chair</strong>), ICML 2022 (<strong>Senior Area Chair</strong>), ICLR 2022 (<strong>Highlighted Area Chair</strong>), ICPR 2022  
 (<strong>Program Co-Chair</strong>), AAAI 2022, ACML 2021 (<strong>Area Chair</strong>), NeurIPS 
@@ -4893,7 +4892,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on May 3, 2024. Number of visitors since March 1, 2010:     
+was last updated on May 10, 2024. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
